# lsearch-core

./: .gitignore  BENCHMARK.md  Cargo.toml  run_benchmarks.ps1
src/: alloc.rs  error.rs  glob.rs  main.rs  prelude.rs
src/core/: error.rs  glob.rs  index.rs  io.rs  mod.rs  path_utils.rs  progress.rs  search.rs  task.rs  task_manager.rs
src/interface/: jsonrpc.rs  mod.rs
src/interfaces/json_lines/: index.rs  index_request.rs  mod.rs  search.rs  search_request.rs
src/test/: benchmark.rs  cases.rs  mod.rs  utils.rs
test_data/medium_dataset/: file_000000.txt  file_000001.txt  file_000002.txt  file_000003.txt  file_000004.txt  file_000005.txt  file_000006.txt  file_000007.txt  file_000008.txt  file_000009.txt  file_000010.txt  file_000011.txt  file_000012.txt  file_000013.txt  file_000014.txt  file_000015.txt  file_000016.txt  file_000017.txt  file_000018.txt  file_000019.txt  file_000020.txt  file_000021.txt  file_000022.txt  file_000023.txt  file_000024.txt  file_000025.txt  file_000026.txt  file_000027.txt  file_000028.txt  file_000029.txt  file_000030.txt  file_000031.txt  file_000032.txt  file_000033.txt  file_000034.txt  file_000035.txt  file_000036.txt  file_000037.txt  file_000038.txt  file_000039.txt  (+460 more)
test_data/precision_test/: file1.txt  file2.txt  file3.txt  lorem.txt  truth_value_generator.py
test_resources/: testgrounds.index  wise_words.txt
test_resources/1/: .ignoreme  helloworld.txt
