[package]
name = "lsearch-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
globset = "0.4.18"
itertools = "0.14.0"
tempfile = "3.23.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-pool = "1.2.0"
encoding_rs = "0.8.35"
async-recursion = "1.1.1"
