[package]
name = "lsearch-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# When will you assholes go 1.0
async-stream = "0.3.6"
futures = "0.3.31"
globset = "0.4.18"
itertools = "0.14.0"
tokio-stream = "0.1.17"
encoding_rs = "0.8.35"
console-subscriber = "0.5.0"
# Already 1.0, thank you!
tokio = { version = "1.*", features = ["full", "tracing"] }
serde = { version = "1.*", features = ["derive"] }
async-pool = "1.*"
async-recursion = "1.*"
num_cpus = "1.*"
postcard = { version = "1.*", features = ["use-std"] }
serde_json = "1.*"
blake3 = "1.*"
clap = { version = "4.*", features = ["derive"] }
chrono = "0.4.42"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rand = "0.9.2"
path-clean = "1.0.1"
